--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint:fix": "npm run lint -- --fix",
     "test": "npm run lint && jest ./test/*",
     "test:watch": "jest --watch ./test/unit/*.spec.ts",
+    "test:watch:test": "jest --watch ./test/unit/simpleCsvProcessor.spec.ts",
     "dev": "ts-node src/index.ts",
     "semantic-release": "semantic-release"
   },
@@ -73,6 +74,7 @@
     "access": "public"
   },
   "dependencies": {
+    "csv-parse": "^4.12.0",
     "highland": "^2.13.5"
   }
 }
