--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
 
       - uses: actions/cache@v2
         with:
-          path: ~/.npm
+          path: ~/.node_modules
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
@@ -30,3 +30,6 @@ jobs:
       - run: npm run lint
       - run: npm run build --if-present
       - run: npm test
+      - run: curl -s https://codecov.io/bash | bash
+        env:
+          CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
