--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@rpidanny/typescript-package-template",
-  "version": "1.0.1",
+  "name": "@rpidanny/streamline.js",
+  "version": "0.0.0",
   "description": "Typescript package boilerplate template",
   "main": "dist/index.js",
   "types": "dist/index.d.js",
@@ -9,12 +9,14 @@
     "lint": "eslint . --ext .js,.ts",
     "lint:fix": "npm run lint -- --fix",
     "test": "npm run lint && jest ./test/*",
+    "test:watch": "jest --watch ./test/unit/*.spec.ts",
+    "test:watch:test": "jest --watch ./test/unit/Streamline.spec.ts",
     "dev": "ts-node src/index.ts",
     "semantic-release": "semantic-release"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rpidanny/typescript-package-template.git"
+    "url": "git+https://github.com/rpidanny/streamline.js.git"
   },
   "keywords": [
     "typescript",
@@ -25,9 +27,9 @@
   "author": "Abhishek <abhishek.rpidanny@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/rpidanny/typescript-package-template/issues"
+    "url": "https://github.com/rpidanny/streamline.js/issues"
   },
-  "homepage": "https://github.com/rpidanny/typescript-package-template#readme",
+  "homepage": "https://github.com/rpidanny/streamline.js#readme",
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged",
@@ -47,6 +49,7 @@
     "@semantic-release/commit-analyzer": "^8.0.1",
     "@semantic-release/git": "^9.0.0",
     "@semantic-release/npm": "^7.0.6",
+    "@types/highland": "^2.12.10",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
     "@typescript-eslint/parser": "^4.6.0",
     "eslint": "^7.6.0",
@@ -58,6 +61,7 @@
     "lint-staged": "^10.5.0",
     "prettier": "^2.0.5",
     "semantic-release": "^17.2.1",
+    "to-readable-stream": "^2.1.0",
     "ts-jest": "^26.1.4",
     "ts-node": "^9.0.0",
     "tsc": "^1.20150623.0",
@@ -68,5 +72,9 @@
   ],
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "csv-parse": "^4.12.0",
+    "highland": "^2.13.5"
   }
 }
